k8s/canary-app/ingress-canary.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-app-canary
  labels:
    app: my-app
  annotations:
    kubernetes.io/ingress.class: "nginx"

    # Enable canary and send 10% of traffic to version 2
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-weight: "40"
spec:
  rules:
  - host: app.kirandns.site
    http:
      paths:
      - path: /                 # You can add this for clarity
        pathType: Prefix        # Required in v1 API
        backend:
          service:
            name: my-app-v2     # updated from serviceName
            port:
              number: 80        # updated from servicePort
